fullSandbox11072023/force-app/main/default/objects/SuMo_Opportunities_uptodate__c/SuMo_Opportunities_uptodate__c.object-meta.xml
<CustomObject>
    <label>SuMo Opportunities uptodate</label>
    <nameField>
        <displayFormat>opp{0000000}</displayFormat>
        <label>SuMo Opportunities uptodate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SuMo Opportunities uptodate</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>