fullSandbox11072023/force-app/main/default/objects/SuMo_Opportunities_uptodate__c/fields/As_Of__c.field-meta.xml
<CustomField>
    <fullName>As_Of__c</fullName>
    <label>As Of</label>
    <type>Date</type>
</CustomField>