fullSandbox11072023/force-app/main/default/objects/SuMo_Opportunities_uptodate__c/fields/Current__c.field-meta.xml
<CustomField>
    <fullName>Current__c</fullName>
    <formula>As_Of__c &gt;= (today() - 3)</formula>
    <label>Current</label>
    <type>Checkbox</type>
</CustomField>