fullSandbox11072023/force-app/main/default/objects/SuMo_Opportunities_uptodate__c/fields/Opps_With_Bad_Closedate__c.field-meta.xml
<CustomField>
    <fullName>Opps_With_Bad_Closedate__c</fullName>
    <label>Opps With Bad Closedate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>